--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1578795_rumqjgdnag.css">
-    <title>vue-surveyeditor</title>
+    <title>易研问卷</title>
   </head>
   <body>
     <noscript>
